# crystal-beta

./: .gitignore  CMakeLists.txt  README.md
doc/: OriginalMeshFormat.txt
network/: client.cpp  server.cpp
src/: App.cpp  App.hpp  Game.cpp  Game.hpp  main.cpp  main.txt  main2.txt  main_.txt  main_image.txt  main_pmx.txt  main_ttf.txt
src/font/: TrueType.cpp  TrueType.hpp  common.hpp
src/font/true_type/: Cmap.hpp  Glyf.hpp  Head.hpp  Loca.hpp  Maxp.hpp  utils.hpp
src/glsl/: basic.frag.glsl  basic.vert.glsl  bone_line.frag.glsl  bone_line.vert.glsl  bone_point.vert.glsl  bounding_box.vert.glsl  bounding_box_transform.comp.glsl  compute_test.comp.glsl  debug_bounding_box.frag.glsl  debug_bounding_box.vert.glsl  debug_frustum.vert.glsl  deferred_first.frag.glsl  deferred_first.vert.glsl  deferred_geometry.frag.glsl  deferred_geometry.vert.glsl  deferred_light.frag.glsl  deferred_second.frag.glsl  forward.frag.glsl  forward.vert.glsl  fourier_transform.tmp  frustum_culling.tmp  frustum_culling_instance.comp.glsl  frustum_culling_meshlet.comp.glsl  gaussian_blur.frag.glsl  image_test.frag.glsl  merge.frag.glsl  mmd_forward.vert.glsl  radial_blur.frag.glsl  render_pass_test.frag.glsl  rigid.frag.glsl  rigid.vert.glsl  simple_plane.frag.glsl  simple_plane.vert.glsl  tessellation_test.tesc.glsl  tessellation_test.tese.glsl  tessellation_test.vert.glsl  ttf_line.tesc.glsl  ttf_line.tese.glsl  ttf_line.vert.glsl  ttf_point.frag.glsl  (+4 more)
src/graphics/: CustomAllocator.hpp  DeviceMemoryAllocator.hpp  DeviceProperties.hpp  Engine.cpp  Engine.hpp  HostMemoryAllocator.hpp  InstanceProperties.hpp  Logger.hpp  common.hpp  debug_utils.hpp
src/image/: BMP.cpp  BMP.hpp  DDS.cpp  DDS.hpp  Image.hpp  JPG.cpp  JPG.hpp  PNG.cpp  PNG.hpp  PPM.cpp  PPM.hpp  common.hpp  stb_image.cpp
src/image/bmp/: FileHeader.hpp  InfoHeader.hpp
src/image/dds/: Header.hpp  HeaderDX10.hpp
src/image/jpg/: DHT.hpp  DQT.hpp  SOF0.hpp  SOS.hpp  utils.hpp
src/image/png/: CanonicalHuffman.hpp  CustomHuffman.hpp  Deflate.hpp  FixedHuffman.hpp  IDAT.hpp  IHDR.hpp  Image.hpp  LZSS.hpp  utils.hpp
src/images/: Image.hpp  JPEG.hpp
src/log/: Logger.hpp
src/mesh/: BasicMesh.cpp  BasicMesh.hpp  Decimator.cpp  Decimator.hpp  HalfEdge.cpp  HalfEdge.hpp  Meshlet.cpp  Meshlet.hpp  Obj.cpp  Obj.hpp  PMX.cpp  PMX.hpp  common.hpp
src/mesh/pmx/: Bone.hpp  Frame.hpp  Joint.hpp  Material.hpp  Morph.hpp  Rigid.hpp  Vertex.hpp  utils.hpp
src/meshes/: Mesh.cpp  Mesh.hpp  Obj.hpp  PMX.hpp
src/physics/: common.hpp
src/vkw/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  ComputePipelineStates.hpp  Descriptor.hpp  Device.cpp  Device.hpp  Device_.cpp  Device_.hpp  Fence.hpp  Framebuffer.hpp  GraphicsPipelineStates.hpp  Image.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  Queue.hpp  RenderPass.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainImages.hpp  _CommandBuffer.hpp  _Device.hpp  _Instance.hpp  _PhysicalDevice.hpp  _Queue.hpp  common.hpp  debug.hpp  handle.hpp
src/vkw/command_buffer/: Commands.hpp
src/vkw/common/: common.hpp  debug.hpp
src/vkw/descriptor/: DescriptorSetLayoutBindings.hpp  WriteDescriptorSets.hpp
src/vkw/object/: Buffer.hpp  BufferView.hpp  CommandBuffers.hpp  CommandPool.hpp  DescriptorPool.hpp  DescriptorSetLayout.hpp  DescriptorSets.hpp  Device.hpp  DeviceMemory.hpp  Event.hpp  Fence.hpp  (+16 more)
(+112 files in other folders)
